// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> matches snapshot 1`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Ashton.org/"
>
  <div
    key="2d9e9bcc-f46a-4516-8896-4ffea6ae8c41"
  >
    autem et modi tenetur amet modi reprehenderit
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 2`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Bradley.io/"
  target="_blank"
>
  libero odit aut labore qui aut inventore
  <span
    key="bbc36e8a-3928-4077-baa2-9c927928a031"
  >
    molestiae cupiditate autem consequatur consequatur accusantium molestiae
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 3`] = `
<LinkComponent
  className="sc-AxjAm kGmApj autem eligendi nihil quis eveniet sit voluptas"
  href="http://www.Botsford.biz/"
  target="_self"
>
  <span
    key="d82ec38a-3d7c-4be5-9157-537ce2045691"
  >
    accusantium vel enim sint voluptatem porro ut
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 4`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Jaron.name/"
  target="_blank"
>
  <span
    key="c664e88b-186b-4bcd-83b1-37fd3a9e071a"
  >
    reiciendis perspiciatis ut illo sit rerum accusamus
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 5`] = `
<LinkComponent
  className="sc-AxjAm kGmApj et debitis dolorem possimus accusantium enim est"
  href="http://www.Morissette.name/"
  target="_blank"
>
  <div
    key="9bfe3d66-49bc-4a9a-ac27-7289385c16b5"
  >
    delectus aliquid et dicta ipsam qui provident
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 6`] = `
<LinkComponent
  className="sc-AxjAm kGmApj possimus voluptas eaque expedita iste velit et"
  href="http://www.Upton.tv/"
>
  <div
    key="9babf7d5-46ce-4172-9608-15c773cff13b"
  >
    quia blanditiis qui sed a dolores voluptatem
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 7`] = `
<LinkComponent
  className="sc-AxjAm kGmApj rerum aliquid reiciendis dolorem porro voluptates ut"
  href="http://www.Maude.name/"
  target="_blank"
>
  laborum officia iure eius veritatis voluptates suscipit
</LinkComponent>
`;

exports[`<Link> matches snapshot 8`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://McDermott.biz/"
>
  repellendus qui est quis est veniam eum
</LinkComponent>
`;
